[package]
name = "tuf"
version = "0.1.1"
edition = "2018"

[dependencies]
deno_bindgen = "0.5.1"
serde = { version = "1", features = ["derive"] }
reqwest = { version = "0.11.10", default-features = false, features = ["blocking", "rustls-tls"] }

[patch.crates-io]
rustls = { git = "https://github.com/rustls/rustls.git", features = ["dangerous_configuration"] }

[lib]
name = "tuf"
crate-type = ["cdylib"]
