[package]
name = "tuf"
version = "0.1.1"
edition = "2018"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11.10", default-features = false, features = ["blocking", "rustls-tls"] }

[patch.crates-io]
rustls = { git = "https://github.com/rustls/rustls.git", features = ["dangerous_configuration"] }

[lib]
name = "tuf"
crate-type = ["cdylib"]
